--- a/ExploreTheUniverse_LTNC.vcxproj
+++ b/ExploreTheUniverse_LTNC.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{56e44399-1ccd-4375-b517-dcd545aa2dc5}</ProjectGuid>
     <RootNamespace>ExploreTheUniverseLTNC</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>JungleCruise_LTNC</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -140,10 +141,12 @@
     <ClCompile Include="BaseObject.cpp" />
     <ClCompile Include="CommonFuction.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="game_map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseObject.h" />
     <ClInclude Include="CommonFunction.h" />
+    <ClInclude Include="game_map.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
