--- a/ExploreTheUniverse_LTNC.vcxproj.filters
+++ b/ExploreTheUniverse_LTNC.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="BaseObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="game_map.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommonFunction.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="BaseObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="game_map.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
