--- a/ExploreTheUniverse_LTNC.vcxproj
+++ b/ExploreTheUniverse_LTNC.vcxproj
@@ -139,12 +139,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="BaseObject.cpp" />
+    <ClCompile Include="MainObject.cpp" />
     <ClCompile Include="CommonFuction.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="game_map.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BaseObject.h" />
+    <ClInclude Include="MainObject.h" />
     <ClInclude Include="CommonFunction.h" />
     <ClInclude Include="game_map.h" />
   </ItemGroup>
