--- a/ExploreTheUniverse_LTNC.vcxproj
+++ b/ExploreTheUniverse_LTNC.vcxproj
@@ -153,6 +153,7 @@
     <ClInclude Include="MainObject.h" />
     <ClInclude Include="CommonFunction.h" />
     <ClInclude Include="game_map.h" />
+    <ClInclude Include="ThreatObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
