--- a/ExploreTheUniverse_LTNC.vcxproj.filters
+++ b/ExploreTheUniverse_LTNC.vcxproj.filters
@@ -56,5 +56,8 @@
     <ClInclude Include="BulletObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ThreatObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
