--- a/JungleCruise_LTNC.cbp
+++ b/JungleCruise_LTNC.cbp
@@ -12,12 +12,19 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-g" />
+					<Add option="-std=gnu++17" />
 					<Add directory="../../Downloads/SDL2-devel-2.30.2-mingw/SDL2-2.30.2/x86_64-w64-mingw32/include/SDL2" />
+					<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_mixer-2.0.0/x86_64-w64-mingw32/include/SDL2" />
+					<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_ttf-2.0.12/x86_64-w64-mingw32/include/SDL2" />
+					<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_image-2.0.3/x86_64-w64-mingw32/include/SDL2" />
 				</Compiler>
 				<Linker>
-					<Add option="-lmingw32 -lSDL2main -lSDL2" />
+					<Add option="-O2" />
+					<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_mixer -lSDL2_image" />
 					<Add directory="../../Downloads/SDL2-devel-2.30.2-mingw/SDL2-2.30.2/x86_64-w64-mingw32/lib" />
+					<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_image-2.0.3/x86_64-w64-mingw32/lib" />
+					<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_ttf-2.0.12/x86_64-w64-mingw32/lib" />
+					<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_mixer-2.0.0/x86_64-w64-mingw32/lib" />
 				</Linker>
 			</Target>
 			<Target title="Release">
@@ -35,7 +42,18 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_mixer-2.0.0/x86_64-w64-mingw32/include/SDL2" />
+			<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_ttf-2.0.12/x86_64-w64-mingw32/include/SDL2" />
+			<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_image-2.0.3/x86_64-w64-mingw32/include/SDL2" />
+			<Add directory="C:/Users/ADMIN88/Downloads/SDL2-devel-2.30.2-mingw/SDL2-2.30.2/x86_64-w64-mingw32/include/SDL2" />
 		</Compiler>
+		<Linker>
+			<Add option="-lmingw32 -lSDL2main -lSDL2 -lSDL2_ttf -lSDL2_mixer -lSDL2_image" />
+			<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_mixer-2.0.0/x86_64-w64-mingw32/lib" />
+			<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_ttf-2.0.12/x86_64-w64-mingw32/lib" />
+			<Add directory="C:/Users/ADMIN88/Downloads/SDL_setup/SDL2_image-2.0.3/x86_64-w64-mingw32/lib" />
+			<Add directory="C:/Users/ADMIN88/Downloads/SDL2-devel-2.30.2-mingw/SDL2-2.30.2/x86_64-w64-mingw32/lib" />
+		</Linker>
 		<Unit filename=".gitattributes" />
 		<Unit filename=".gitignore" />
 		<Unit filename="Background.png" />
